test/k8s-e2e/proxy/ac-values-proxy.yml
# Flux proxy configuration.
installation:
  extraEnv:
    # Configures helm repo add to use the proxy.
    - name: HTTPS_PROXY
      # we faced an issue with the proxy when using https://, so we use http://
      # https://github.com/helm/helm/issues/31111
      value: http://mitmproxy-service:8080
    # except for in-cluster request.
    - name: "NO_PROXY"
      value: ".cluster.local.,.cluster.local,cluster.local,.svc,127.0.0.0/8,10.0.0.0/8"
  extraVolumeMounts:
    # Mount a CA certificate bundle to the source-controller Trust root store.
    # It should contain the proxy CA certificates on it.
    - mountPath: /etc/ssl/certs/ca-certificates.crt
      subPath: ca-certificates.crt
      name: shared-volume-ca
  extraVolumes:
    - name: shared-volume-ca
      persistentVolumeClaim:
        claimName: mitm-ca-pvc

agentControlCd:
  chartValues:
    flux2:
      sourceController:
        extraEnv:
          # Configures Flux source-controller to proxy all request.
          - name: HTTPS_PROXY
            value: http://mitmproxy-service:8080
          # except for in-cluster request.
          - name: "NO_PROXY"
            value: ".cluster.local.,.cluster.local,cluster.local,.svc,127.0.0.0/8,10.0.0.0/8"
        volumeMounts:
          # Mount a CA certificate bundle to the source-controller Trust root store.
          # It should contain the proxy CA certificates on it.
          - mountPath: /etc/ssl/certs/ca-certificates.crt
            subPath: ca-certificates.crt
            name: shared-volume-ca
        volumes:
          - name: shared-volume-ca
            persistentVolumeClaim:
              claimName: mitm-ca-pvc


toolkitImage:
  tag: failIfNotReplaced
agentControlDeployment:
  chartValues:
    image:
      tag: failIfNotReplaced
    subAgentsNamespace: "newrelic-agents"
    # NOTE: nrStaging is set by Tiltfile based on REGION env var (staging vs US)
    # Mount a CA certificate bundle to the source-controller Trust root store.
    # It should contain the proxy CA certificates on it.
    extraVolumeMounts:
      - mountPath: /etc/ssl/certs/ca-certificates.crt
        subPath: ca-certificates.crt
        name: shared-volume-ca
    extraVolumes:
      - name: shared-volume-ca
        persistentVolumeClaim:
          claimName: mitm-ca-pvc

    proxy:
      url: https://mitmproxy-service:8080
    config:
      authSecret:
        secretName: "agent-control-auth"
        secretKeyName: "private_key"
      log:
        level: trace
      fleet_control:
        enabled: true
        # Fleet with name 'ac-e2e-empty-deployment'. The sub-agent reports data to the 'Agent Control Canaries' account.
        # This fleet doesn't have any deployment configured.
        # NOTE: This fleet_id is provided by region-specific values file (ac-values-proxy-<region>.yml)
      agents:
        prometheus:
          agent_type: newrelic/com.newrelic.prometheus:0.1.0
    agentsConfig:
      prometheus:
        chart_version: "*"
        # NOTE: nrStaging is set by Tiltfile based on REGION env var (staging vs US)
        # Proxy config should be added to Prom config on a prod environment. But this is out of scope of AC.
    systemIdentity:
      # NOTE: This organizationId is provided by region-specific values file (ac-values-proxy-<region>.yml)
      parentIdentity:
        fromSecret: sys-identity-creds

      extraVolumeMounts:
        - mountPath: /etc/ssl/certs/ca-certificates.crt
          subPath: ca-certificates.crt
          name: shared-volume-ca
      extraVolumes:
        - name: shared-volume-ca
          persistentVolumeClaim:
            claimName: mitm-ca-pvc
